<resources>
    <string name="app_name">Green Flag</string>
    <string name="main_text">GreenFlag customers can create an account to access</string>
    <string name="car_health">Car health updates</string>
    <string name="request">Request a rescue online</string>
    <string name="policy">Policy information</string>
    <string name="create_account">Create an account</string>
    <string name="next">Next</string>
    <string name="email_address">Email address</string>
    <string name="create_password">Create password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="criteria_below">See criteria below</string>
    <string name="password_text">Your password should have a minimum of 8 characters and contain at least one number, one uppercase and one lower case letter. You can use special characters.</string>
    <string name="account_exist">An account already exists for this email address</string>
    <string name="see_criteria">Password incorrect, see password criteria</string>
    <string name="password_match_not">Your passwords do not match</string>
    <string name="no_email_format">This is not an email format</string>
</resources>